--- a/Helm3/templates/draw-rollout.yaml
+++ b/Helm3/templates/draw-rollout.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: vcoins-rollout
+  name: draw-rollout
   namespace: default
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: vcoins-app
+      app: draw-app
   strategy:
     canary:
       steps:
@@ -21,17 +21,17 @@ spec:
   template:
     metadata:
       labels:
-        app: vcoins-app
+        app: draw-app
     spec:
       containers:
-      - name: vcoins-app
+      - name: draw-app
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: Always  # Ensures the latest image is always pulled
+ #       imagePullPolicy: Always  # Ensures the latest image is always pulled
         ports:
-        - containerPort: 8484
+        - containerPort: 8080
         resources:
           limits:
-            memory: "100Mi"  # Set memory limit to 100MB
+            memory: "300Mi"  # Set memory limit to 100MB
           requests:
-            memory: "100Mi"  # Optional: set a memory request to match the limit
+            memory: "200Mi"  # Optional: set a memory request to match the limit
 
