--- a/Helm4/templates/uptime-ingress.yaml
+++ b/Helm4/templates/uptime-ingress.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: vcoins-ingress
+  name: uptime-ingress
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
-    - host: vcoins.ajs-engineer.com  # Custom domain for local access
+    - host: uptime.ajs-engineer.com   # Custom domain for local access
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: vcoins-service  # The service you've already set up
+                name: uptime-service  # The service you've already set up
                 port:
                   number: 80
