--- a/application1.yaml
+++ b/application1.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/AJAFF7/Argo.git
+    repoURL: https://github.com/AJAFF7/Argo-0.git
     targetRevision: HEAD
     path: Helm1  # Update the path to the Helm chart directory
     helm:
