--- a/Helm5/templates/cloudflare-service.yaml
+++ b/Helm5/templates/cloudflare-service.yaml
@@ -6,4 +6,8 @@ metadata:
 spec:
   selector:
     app: cloudflare-app
+  ports:
+    - protocol: TCP
+      port: 80           # The port exposed by the service
+      targetPort: 80      # The port on the container that the service should forward traffic to
 
