--- a/Helm6/values.yaml
+++ b/Helm6/values.yaml
@@ -1,10 +1,10 @@
-semaphore:
+semaphore-app:
   image:
     repository: semaphoreui/semaphore
     tag: latest
   replicaCount: 1
 
-mysql:
+mysql-app:
   image:
     repository: mysql
     tag: 8.0
