--- a/Helm6/templates/semaphore.yaml
+++ b/Helm6/templates/semaphore.yaml
@@ -1,82 +1,62 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: semaphore-rollout
-  namespace: default
+  name: semaphore
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: semaphore-app
-  strategy:
-    canary:
-      steps:
-      - setWeight: 20
-      - pause:
-          duration: 30s
-      - setWeight: 50
-      - pause:
-          duration: 60s
-      - setWeight: 100
+      app: semaphore
   template:
     metadata:
       labels:
-        app: semaphore-app
+        app: semaphore
     spec:
       containers:
-      - name: semaphore-app
-        image: "semaphoreui/semaphore:latest"
-        ports:
-        - containerPort: 3000
-        env:
-        - name: SEMAPHORE_DB_USER
-          value: semaphore
-        - name: SEMAPHORE_DB_PASS
-          value: semaphore
-        - name: SEMAPHORE_DB_HOST
-          value: mysql-service
-        - name: SEMAPHORE_DB_PORT
-          value: "3306"
-        - name: SEMAPHORE_DB_DIALECT
-          value: mysql
-        - name: SEMAPHORE_DB
-          value: semaphore
-        - name: SEMAPHORE_PLAYBOOK_PATH
-          value: /tmp/semaphore/
-        - name: SEMAPHORE_ADMIN_PASSWORD
-          value: admin
-        - name: SEMAPHORE_ADMIN_NAME
-          value: admin
-        - name: SEMAPHORE_ADMIN_EMAIL
-          value: a.j.s-engineer@outlook.com
-        - name: SEMAPHORE_ADMIN
-          value: admin
-        - name: SEMAPHORE_ACCESS_KEY_ENCRYPTION
-          value: LxLP2zsSptao27pM6dTel83d5vdJOIydmktnHPrLkJU=
-        - name: SEMAPHORE_LDAP_ACTIVATED
-          value: 'no'
-        - name: ANSIBLE_HOST_KEY_CHECKING
-          value: "False"
-        resources:
-          limits:
-            memory: "100Mi"
-          requests:
-            memory: "100Mi"
-
+        - name: semaphore
+          image: semaphoreui/semaphore:latest
+          ports:
+            - containerPort: 3000
+          env:
+            - name: SEMAPHORE_DB_USER
+              value: semaphore
+            - name: SEMAPHORE_DB_PASS
+              value: semaphore
+            - name: SEMAPHORE_DB_HOST
+              value: mysql-service # Adjust according to your DB service
+            - name: SEMAPHORE_DB_PORT
+              value: "3306"
+            - name: SEMAPHORE_DB_DIALECT
+              value: mysql
+            - name: SEMAPHORE_DB
+              value: semaphore
+            - name: SEMAPHORE_PLAYBOOK_PATH
+              value: /tmp/semaphore/
+            - name: SEMAPHORE_ADMIN_PASSWORD
+              value: admin
+            - name: SEMAPHORE_ADMIN_NAME
+              value: admin
+            - name: SEMAPHORE_ADMIN_EMAIL
+              value: a.j.s-engineer@outlook.com
+            - name: SEMAPHORE_ADMIN
+              value: admin
+            - name: SEMAPHORE_ACCESS_KEY_ENCRYPTION
+              value: LxLP2zsSptao27pM6dTel83d5vdJOIydmktnHPrLkJU=
+            - name: SEMAPHORE_LDAP_ACTIVATED
+              value: 'no'
+            - name: ANSIBLE_HOST_KEY_CHECKING
+              value: "False"
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: semaphore-service
-  namespace: default
 spec:
-  type: LoadBalancer 
   selector:
-    app: semaphore-app
+    app: semaphore
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 3000
-
+  type: LoadBalancer
 
