--- a/Helm6/templates/mysql.yaml
+++ b/Helm6/templates/mysql.yaml
@@ -44,7 +44,7 @@ spec:
   ports:
     - port: 3306
       targetPort: 3306
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
