--- a/Helm1/templates/service.yaml
+++ b/Helm1/templates/service.yaml
@@ -4,11 +4,11 @@ metadata:
   name: dms-service
   namespace: default
 spec:
-  type: LoadBalancer   # Change to ClusterIP for internal routing via Ingress
+  type: ClusterIP  # Internal routing via Istio
   selector:
     app: dms-app
   ports:
     - protocol: TCP
-      port: 80         # External port exposed by the service
-      targetPort: 8282  # The container's port (defined in your Rollout)
+      port: 80
+      targetPort: 8282
 
