--- a/Helm8/templates/k8s-ingress.yaml
+++ b/Helm8/templates/k8s-ingress.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: hp-ingress
+  name: k8s-ingress
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
-    - host: hp.ajs-engineer.com   # Custom domain for local access
+    - host: k8s.ajs-engineer.com  # Custom domain for local access
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: hp-service  # The service you've already set up
+                name: k8s-service  # The service you've already set up
                 port:
                   number: 80
