--- a/Helm8/templates/service.yaml
+++ b/Helm8/templates/service.yaml
@@ -1,19 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hp-service
+  name: k8s-service
   namespace: default
 spec:
-  type: LoadBalancer # Change to ClusterIP for internal routing via Ingress
+  type: LoadBalancer   # Change to ClusterIP for internal routing via Ingress
   selector:
-    app: homepage
+    app: k8s-app
   ports:
     - protocol: TCP
       port: 80         # External port exposed by the service
-      targetPort: 3000 # The container's port (defined in your Rollout)
-
-
-
-
-
+      targetPort: 3535  # The container's port (defined in your Rollout)
 
