--- a/config/prometheus.yaml
+++ b/config/prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: prometheus
+  namespace: default
 data:
   prometheus.yml: |
     global:
@@ -31,7 +31,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus
-  namespace: prometheus
+  namespace: default
   labels:
     app: prometheus
 spec:
@@ -74,7 +74,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: prometheus
+  namespace: default
 spec:
   selector:
     app: prometheus
