--- a/config/prometheus.yaml
+++ b/config/prometheus.yaml
@@ -19,7 +19,12 @@ data:
 
       - job_name: 'nginx-ingress'
         static_configs:
-          - targets: ['172.18.0.2:30001']  # Replace with your NGINX metrics endpoint
+          - targets: ['172.18.0.2:30001']  # Replace with your NGINX metrics endpoint  
+          
+      - job_name: 'rabbitmq-exporter'
+        static_configs:
+          - targets: ['172.18.0.128:9419']  # Replace with your rabbitmq-exporter metrics endpoint  http:///
+     
 
 
 
