--- a/config/rabbitmq.yaml
+++ b/config/rabbitmq.yaml
@@ -44,6 +44,13 @@ spec:
                 secretKeyRef:
                   name: rabbitmq-secret
                   key: password
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
           volumeMounts:
             - name: rabbitmq-storage
               mountPath: /var/lib/rabbitmq
