--- a/Helm6/templates/semaphore+pgsql.yaml
+++ b/Helm6/templates/semaphore+pgsql.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: semaphore
-  namespace: default
 spec:
   replicas: 1
   selector:
@@ -17,7 +16,7 @@ spec:
         - name: semaphore
           image: semaphoreui/semaphore:latest
           ports:
-            - containerPort: 3000  # Changed to 4040
+            - containerPort: 3000
           env:
             - name: SEMAPHORE_DB_USER
               value: semaphore
@@ -53,13 +52,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: semaphore-service
-  namespace: default
 spec:
   selector:
     app: semaphore
   ports:
     - port: 80
-      targetPort: 3000  # Changed to 4040
+      targetPort: 3000
   type: LoadBalancer
 
 ---
@@ -67,7 +65,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgresql
-  namespace: default
 spec:
   replicas: 1
   selector:
@@ -103,7 +100,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgresql-service
-  namespace: default
 spec:
   selector:
     app: postgresql
@@ -117,11 +113,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgresql-pvc
-  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 4Gi
-
