--- a/config/mongo.yaml
+++ b/config/mongo.yaml
@@ -48,3 +48,29 @@ spec:
           persistentVolumeClaim:
             claimName: mongo-pvc
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-service
+  namespace: default
+spec:
+  selector:
+    app: mongo-app
+  ports:
+    - port: 27017
+      targetPort: 27017
+  type: LoadBalancer  # Expose the service externally as a LoadBalancer
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 4Gi
+
