--- a/config/rabbitmq.yaml
+++ b/config/rabbitmq.yaml
@@ -30,7 +30,7 @@ spec:
           image: rabbitmq:3.13.7-management-alpine
           ports:
             - name: amqp
-              containerPort: 5672  # AMQP Port
+              containerPort: 5672 # AMQP Port
             - name: management
               containerPort: 15672 # Management UI
           env:
@@ -72,11 +72,10 @@ spec:
       protocol: TCP
       port: 5672
       targetPort: 5672
-      nodePort: 31410  # NodePort for AMQP
+      nodePort: 31410 # NodePort for AMQP
     - name: management
       protocol: TCP
       port: 15672
       targetPort: 15672
-      nodePort: 31411  # NodePort for Management UI
-  type: NodePort
-
+      nodePort: 31411 # NodePort for Management UI
+  type: LoadBalancer
